--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.jpa.show-sql=true
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASS}
 
+flyway.user=${POSTGRES_USER}
+flyway.password=${POSTGRES_PASS}
+flyway.url=${POSTGRES_URL}
+flyway.schemas=digitalbookmark
+flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate = true
