--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,18 @@ spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASS}
 
-flyway.user=${POSTGRES_USER}
-flyway.password=${POSTGRES_PASS}
-flyway.url=${POSTGRES_URL}
-flyway.schemas=digitalbookmark
-flyway.locations=classpath:db/migration
+spring.flyway.user=${POSTGRES_USER}
+spring.flyway.password=${POSTGRES_PASS}
+spring.flyway.url=${POSTGRES_URL}
+spring.flyway.schemas=digitalbookmark
+spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate = true
+
+spring.rabbitmq.host=${RABBIT_MQ_HOST}
+spring.rabbitmq.port=${RABBIT_MQ_PORT}
+spring.rabbitmq.username=${RABBIT_MQ_USER}
+spring.rabbitmq.password=${RABBIT_MQ_PASS}
+
+rabbitmq.queue.name=digitalbookmark_queue
+rabbitmq.exchange.name=digitalbookmark_exchange
+rabbitmq.routing_key.name=digitalbookmark_routing_key
