--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,17 @@ spring.flyway.schemas=digitalbookmark
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate = true
 
-spring.rabbitmq.host=${RABBIT_MQ_HOST}
-spring.rabbitmq.port=${RABBIT_MQ_PORT}
-spring.rabbitmq.username=${RABBIT_MQ_USER}
-spring.rabbitmq.password=${RABBIT_MQ_PASS}
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.port=${RABBITMQ_PORT}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 
-rabbitmq.queue.name=digitalbookmark_queue
+rabbitmq.auth.queue.name=digitalbookmark_auth_queue
+rabbitmq.auth.routing_key.name=digitalbookmark_auth_routing_key
+rabbitmq.login.queue.name=digitalbookmark_login_queue
+rabbitmq.login.routing_key.name=digitalbookmark_login_routing_key
+rabbitmq.file.queue.name=digitalbookmark_file_queue
+rabbitmq.file.routing_key.name=digitalbookmark_file_routing_key
+rabbitmq.file.permission.queue.name=digitalbookmark_file_permission_queue
+rabbitmq.file.permission.routing_key.name=digitalbookmark_file_permission_routing_key
 rabbitmq.exchange.name=digitalbookmark_exchange
-rabbitmq.routing_key.name=digitalbookmark_routing_key
