--- a/nginx.conf
+++ b/nginx.conf
@@ -10,5 +10,10 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
    }
+   location /analyze {
+        proxy_pass http://analytics:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+   }
 }
 
