add auth context for bookmark service

--- a/BookmarkService/src/main/resources/application.properties
+++ b/BookmarkService/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+server.error.include-message=always
+
 spring.datasource.url=${POSTGRES_HOST}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASS}
@@ -23,8 +25,8 @@ rabbitmq.auth.queue.name=digitalbookmark_auth_queue
 rabbitmq.auth.routing_key.name=digitalbookmark_auth_routing_key
 rabbitmq.login.queue.name=digitalbookmark_login_queue
 rabbitmq.login.routing_key.name=digitalbookmark_login_routing_key
-rabbitmq.file.queue.name=digitalbookmark_file_queue
-rabbitmq.file.routing_key.name=digitalbookmark_file_routing_key
-rabbitmq.file.permission.queue.name=digitalbookmark_file_permission_queue
-rabbitmq.file.permission.routing_key.name=digitalbookmark_file_permission_routing_key
+#rabbitmq.file.queue.name=digitalbookmark_file_queue
+#rabbitmq.file.routing_key.name=digitalbookmark_file_routing_key
+#rabbitmq.file.permission.queue.name=digitalbookmark_file_permission_queue
+#rabbitmq.file.permission.routing_key.name=digitalbookmark_file_permission_routing_key
 rabbitmq.exchange.name=digitalbookmark_exchange
