--- a/AuthService/pom.xml
+++ b/AuthService/pom.xml
@@ -8,18 +8,18 @@
         <artifactId>DigitalBookmark</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>AuthService</artifactId>
+    <artifactId>auth-service</artifactId>
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <java.version>21</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.digitalbookmark</groupId>
-            <artifactId>BookmarkService</artifactId>
+            <artifactId>bookmark-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <classifier>qa</classifier>
         </dependency>
