--- a/FileService/pom.xml
+++ b/FileService/pom.xml
@@ -10,10 +10,11 @@
     </parent>
     <artifactId>file-service</artifactId>
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <java.version>17</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <packaging>jar</packaging>
     </properties>
     <dependencies>
         <dependency>
