improve security config, messaging, remove h2 dep

--- a/FileService/src/main/resources/application.properties
+++ b/FileService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=fileservice
 server.port=8082
 server.error.include-message=always
+server.error.include-stacktrace=never
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${POSTGRES_HOST}
 spring.datasource.username=${POSTGRES_USER}
