--- a/BookmarkService/src/main/resources/application.properties
+++ b/BookmarkService/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
+server.error.include-stacktrace=never
 
 spring.datasource.url=${POSTGRES_HOST}
 spring.datasource.username=${POSTGRES_USER}
