add logs, metrics, prometheus + grafana

--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -23,3 +23,6 @@ rabbitmq.auth.queue.name=digitalbookmark_auth_queue
 rabbitmq.auth.routing_key.name=digitalbookmark_auth_routing_key
 rabbitmq.login.queue.name=digitalbookmark_login_queue
 rabbitmq.login.routing_key.name=digitalbookmark_login_routing_key
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
