--- a/FileService/src/main/resources/application.properties
+++ b/FileService/src/main/resources/application.properties
@@ -26,3 +26,6 @@ rabbitmq.file.routing_key.name=digitalbookmark_file_routing_key
 rabbitmq.file.permission.queue.name=digitalbookmark_file_permission_queue
 rabbitmq.file.permission.routing_key.name=digitalbookmark_file_permission_routing_key
 rabbitmq.exchange.name=digitalbookmark_exchange
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
