--- a/BookmarkService/src/main/resources/application.properties
+++ b/BookmarkService/src/main/resources/application.properties
@@ -31,3 +31,6 @@ rabbitmq.login.routing_key.name=digitalbookmark_login_routing_key
 #rabbitmq.file.permission.queue.name=digitalbookmark_file_permission_queue
 #rabbitmq.file.permission.routing_key.name=digitalbookmark_file_permission_routing_key
 rabbitmq.exchange.name=digitalbookmark_exchange
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
