--- a/k8s/pg-exporter/pg-exporter-service.yaml
+++ b/k8s/pg-exporter/pg-exporter-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus
+  name: postgres-exporter
 spec:
   selector:
-    app: prometheus
+    app: postgres-exporter
   ports:
     - protocol: TCP
-      port: 9090
-      targetPort: 9090
+      port: 9187
+      targetPort: 9187
   type: ClusterIP
