finish files page

--- a/Client/src/main/resources/application.properties
+++ b/Client/src/main/resources/application.properties
@@ -5,3 +5,4 @@ server.port=8083
 
 auth-service.url=${AUTHSERVICE_HOST}
 bookmark-service.url=${BOOKMARKSERVICE_HOST}
+file-service.url=${FILESERVICE_HOST}
