--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,33 @@
 server {
    listen 80;
-   location /api {
-        proxy_pass http://app:8080;
+   location /api/bookmark {
+        proxy_pass http://bookmarkservice:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
    }
-   location /files {
-        proxy_pass http://fileservice:4200;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+   location /api/files {
+       proxy_pass http://fileservice:8082;
+       proxy_set_header Host $host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header X-Forwarded-Proto $scheme;
    }
-   location /analyze {
-        proxy_pass http://analytics:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+   location /api/auth {
+       proxy_pass http://authservice:8081;
+       proxy_set_header Host $host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header X-Forwarded-Proto $scheme;
+   }
+
+   location / {
+       proxy_pass http://client:8083;
+       proxy_set_header Host $host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header X-Forwarded-Proto $scheme;
    }
 }
 
