--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -7,8 +7,8 @@
 		<artifactId>DigitalBookmark</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.Client</groupId>
-	<artifactId>client-app</artifactId>
+
+	<artifactId>client-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>client</name>
 
